Fix Lightbox image caption hover in dark mode

--- a/src/styles/components/ui/lightbox.scss
+++ b/src/styles/components/ui/lightbox.scss
@@ -45,6 +45,10 @@
       @media (prefers-color-scheme: dark) {
         background-color: transparentize($dark-grey, 0.15);
         color: white;
+
+        &:hover {
+          background-color: $dark-grey;
+        }
       }
     }
   }
